<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:id="@+id/select_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:id="@+id/image_header"
        android:src="@mipmap/back"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/panel_sub"
        android:layout_below="@id/image_header"
        android:layout_marginVertical="10dp">

        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/text_from"
            android:text="from"
            android:textSize="20sp"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="→"
            android:textSize="30sp"
            android:layout_marginHorizontal="20dp"/>

        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/text_to"
            android:text="dddd"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/panel_way"
        android:layout_below="@id/panel_sub"
        android:orientation="vertical"
        android:layout_marginVertical="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_way"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radio_way"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio_way_train"
                android:text="@string/text_way_train"
                android:checked="true"
                android:layout_marginHorizontal="75dp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio_way_air"
                android:text="@string/text_way_air"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/panel_plan"
        android:layout_below="@id/panel_way"
        android:orientation="vertical"
        android:layout_marginVertical="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_plan"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radio_plan"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio_plan_time"
                android:text="@string/text_plan_time"
                android:checked="true"
                android:layout_marginHorizontal="20dp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio_plan_money"
                android:text="@string/text_plan_money"
                android:layout_marginHorizontal="20dp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio_plan_station"
                android:text="@string/text_plan_station"/>
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/button_query"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:background="#FF9800"
        android:text="@string/text_query"
        android:textColor="#FFF"
        android:textSize="18dp" />
</RelativeLayout>