<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_quest_add"
        android:layout_above="@id/text_quest_square"
        android:drawableLeft="@drawable/ic_launcher"
        android:text="@string/text_quest_add"
        android:gravity="center"
        android:textColor="#000"
        android:textSize="25sp"
        android:textStyle="bold"
        android:padding="30dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_quest_square"
        android:drawableLeft="@drawable/ic_launcher"
        android:text="@string/text_quest_square"
        android:gravity="center"
        android:textColor="#000"
        android:textSize="25sp"
        android:textStyle="bold"
        android:padding="30dp"
        android:layout_centerVertical="true"
        android:layout_marginVertical="30dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_quest_my"
        android:layout_below="@id/text_quest_square"
        android:drawableLeft="@drawable/ic_launcher"
        android:text="@string/text_quest_my"
        android:gravity="center"
        android:textColor="#000"
        android:textSize="25sp"
        android:textStyle="bold"
        android:padding="30dp"
        android:layout_centerVertical="true"/>
</RelativeLayout>