<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:id="@+id/image_header"
        android:src="@mipmap/back"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_header"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_marginVertical="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_quest_type"
                android:textSize="16sp"
                android:layout_marginHorizontal="10dp"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </Spinner>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_quest_loc"
                android:textSize="16sp"
                android:layout_marginHorizontal="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_quest_loc"
                android:text="user_loc"
                android:gravity="right"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_quest_cost"
                android:textSize="16sp"
                android:layout_marginHorizontal="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_quest_cost"
                android:text="user_cost"
                android:gravity="right"
                android:inputType="numberDecimal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_quest_deadline"
                android:textSize="16sp"
                android:layout_marginHorizontal="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_quest_deadline"
                android:text="user_time"
                android:gravity="right"
                android:inputType="datetime"/>

        </LinearLayout>
    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_confirm"
        android:text="@string/text_quest_confirm"
        android:textSize="18dp"
        android:background="#FF9800"
        android:textColor="#FFF"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>