<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/square_line1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_quest_sloc"
            android:textColor="#000"
            android:textSize="18dp"/>

        <EditText
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="幻想乡"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_city_search"
            android:text="@string/text_search"
            android:background="#FF9800"
            android:textColor="#FFF"
            android:textSize="18dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/square_line2"
        android:layout_below="@id/square_line1"
        android:orientation="horizontal"
        android:layout_marginVertical="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_quest_filter"
            android:textColor="#000"
            android:textSize="18dp"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp">

        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/square_line3"
        android:background="@drawable/quest_square_list_top"
        android:layout_below="@id/square_line2"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_quest_type_bookticket"
            android:textColor="#000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="|"
            android:layout_marginHorizontal="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="博丽神社"
            android:textColor="#000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/square_line4"
        android:background="@drawable/quest_square_list"
        android:layout_below="@id/square_line3"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_quest_type_bookcar"
            android:textColor="#000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="|"
            android:layout_marginHorizontal="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="有去幼儿园的车吗"
            android:textColor="#000"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/square_line5"
        android:background="@drawable/quest_square_list"
        android:layout_below="@id/square_line4"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_quest_type_bookhotel"
            android:textColor="#000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="|"
            android:layout_marginHorizontal="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="有间客栈"
            android:textColor="#000"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/square_line6"
        android:background="@drawable/quest_square_list_bottom"
        android:layout_below="@id/square_line5"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_quest_type_bookticket"
            android:textColor="#000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="|"
            android:layout_marginHorizontal="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="幻想乡入门券求购"
            android:textColor="#000" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_quest_my"
        android:text="@string/text_quest_my"
        android:textColor="#FFF"
        android:textSize="18dp"
        android:background="#FF9800"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>